add tablet and mobile view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
     <title>CV - Vo Thanh Chung</title>
   </head>
   <body>
